--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "npm start --prefix server"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
     "vue": "^3.0.0"
   },
